force-app/main/default/objects/Hard_Drive_Tracker__c/Hard_Drive_Tracker__c.object-meta.xml
<CustomObject>
    <label>HDD Request</label>
    <nameField>
        <displayFormat>KHD-{000000}</displayFormat>
        <label>HDD Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HDD Requestor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>