force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <description>Existing Address of Account</description>
    <formula>Account__r.BillingStreet &amp;&quot;,   &quot; &amp; Account__r.BillingCity  &amp;&quot;,   &quot;  &amp; Account__r.BillingPostalCode  &amp;&quot;,   &quot;  &amp; Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Existing Address of Account</inlineHelpText>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>