force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>HDD Requestor</relationshipLabel>
    <relationshipName>HDD_Requestor</relationshipName>
    <type>Lookup</type>
</CustomField>