force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assign the Contact at the Client Account Site</description>
    <inlineHelpText>Assign the Contact at the Client Account Site</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Hard_Drive_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>