force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <description>Email of Contact</description>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email of Contact</inlineHelpText>
    <label>Contact Email Address</label>
    <type>Text</type>
</CustomField>