force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Phone Number of Contact</description>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Phone Number of Contact</inlineHelpText>
    <label>Contact Phone #</label>
    <type>Text</type>
</CustomField>