force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Drive_Status__c.field-meta.xml
<CustomField>
    <fullName>Drive_Status__c</fullName>
    <label>Drive Location Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At KIS</fullName>
                <default>true</default>
                <label>At KIS</label>
            </value>
            <value>
                <fullName>In Transit to Customer</fullName>
            </value>
            <value>
                <fullName>At Customer</fullName>
            </value>
            <value>
                <fullName>In Transit to KIS</fullName>
            </value>
            <value>
                <fullName>At NOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>