force-app/main/default/objects/Hard_Drive_Tracker__c/fields/KIS_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>KIS_Customer_ID__c</fullName>
    <formula>Account__r.Customer_ID2__c</formula>
    <label>KIS Customer ID#</label>
    <type>Text</type>
</CustomField>