force-app/main/default/objects/Hard_Drive_Tracker__c/fields/KIS_Hard_Drive__c.field-meta.xml
<CustomField>
    <fullName>KIS_Hard_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the HDD assigned to the Client</description>
    <inlineHelpText>Select the HDD assigned to the Client</inlineHelpText>
    <label>KIS Hard Drive</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KIS_Hard_Drives__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>$Source.Drive_Status__c</field>
            <operation>equals</operation>
            <value>At KIS, At NOC</value>
        </filterItems>
        <infoMessage>Suggested search is = keepitsafe</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KIS_Hard_Drives__c</referenceTo>
    <relationshipLabel>HDD Requestor</relationshipLabel>
    <relationshipName>Hard_Drive_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>