force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <defaultValue>&quot;Enter Tracking or Special Instruction Notes Here&quot;</defaultValue>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>