force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Install</fullName>
            </value>
            <value>
                <fullName>Seed Load</fullName>
                <default>true</default>
                <label>Seed Load</label>
            </value>
            <value>
                <fullName>Restore</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>