force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>KeepItSafe</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Hard_Drive_Tracker1</relationshipName>
    <type>Lookup</type>
</CustomField>