force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Requested_HDD_Size_in_GB__c.field-meta.xml
<CustomField>
    <fullName>Requested_HDD_Size_in_GB__c</fullName>
    <description>The size of Drive requested for the Client</description>
    <inlineHelpText>The size of Drive requested for the Client</inlineHelpText>
    <label>Requested HDD Size in GB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>300 GB</fullName>
            </value>
            <value>
                <fullName>500 GB</fullName>
                <default>true</default>
                <label>500 GB</label>
            </value>
            <value>
                <fullName>1000 GB</fullName>
            </value>
            <value>
                <fullName>2000 GB</fullName>
            </value>
            <value>
                <fullName>3000 GB</fullName>
            </value>
            <value>
                <fullName>4000 GB</fullName>
            </value>
            <value>
                <fullName>5000 GB</fullName>
            </value>
            <value>
                <fullName>6000 GB</fullName>
            </value>
            <value>
                <fullName>8000 GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>