force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Resource at KIS which sent the HDD to the Customer</description>
    <inlineHelpText>Name of Resource at KIS which sent the HDD to the Customer</inlineHelpText>
    <label>Sent By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>KeepItSafe</value>
        </filterItems>
        <infoMessage>Any User who has a Profile of KeepItSafe Sales User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Hard_Drive_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>