force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Sent_Via__c.field-meta.xml
<CustomField>
    <fullName>Sent_Via__c</fullName>
    <label>Sent Via</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEDEX</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>ParcelVision</fullName>
            </value>
            <value>
                <fullName>FirstDirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>