force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Status_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Request__c</fullName>
    <description>To be completed by KeepItSafe HDD manager only</description>
    <inlineHelpText>To be completed by KeepItSafe HDD manager only</inlineHelpText>
    <label>Status of HDD Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Shipped</fullName>
                <default>true</default>
                <label>Not Shipped</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>