force-app/main/default/objects/Hard_Drive_Tracker__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>