force-app/main/default/objects/Hard_Drive_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Drive_Status__c</columns>
    <columns>KIS_Hard_Drive__c</columns>
    <columns>Notes__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Requested_HDD_Size_in_GB__c</columns>
    <columns>Status_of_Request__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>